fix dark mode

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 body {
   background-color: #f5f5f5;
   color: #b30000;
-  transition: background-color 0.5s ease, color 0.5s ease; /* Smooth transition for background and text color */
+  transition: background-color 0.5s ease, color 0.5s ease; 
 }
 
 /* Remove text decoration for links and inherit color */
@@ -41,7 +41,7 @@ html {
   height: 100vh;
   background-color: #f5f5f5;
   text-align: center;
-  transition: background-color 0.5s ease, color 0.5s ease; /* Smooth transition for background and text color */
+  transition: background-color 0.5s ease, color 0.5s ease; 
 }
 
 /* Floating button on the bottom right of the page */
@@ -63,11 +63,13 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Hover effect for the floating button */
 .floating-button button:hover {
   background-color: #680101;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Title style on the landing page */
@@ -95,12 +97,14 @@ html {
   border-radius: 5px;
   transition: background-color 0.3s;
   font-weight: bold;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Hover effect for scroll button */
 .scroll-button:hover {
   background-color: #800000;
   color: #ffffff;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* ================================
@@ -112,6 +116,7 @@ html {
   padding: 3em;
   background-color: #f5f5f5;
   text-align: center;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Heading for the About section */
@@ -149,6 +154,7 @@ html {
   text-align: center;
   background-color: #f5f5f5;
   color: #b30000;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Heading for content section */
@@ -179,6 +185,7 @@ html {
   align-items: center;
   transition: transform 0.3s, box-shadow 0.3s;
   cursor: pointer;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Hover effect for tiles */
@@ -187,6 +194,7 @@ html {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
   color: #800000;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* ================================
@@ -255,6 +263,7 @@ html {
   text-align: center;
   text-decoration: none;
   width: auto; /* Ensures the button only takes as much width as needed */
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Hover effect for resource buttons */
@@ -293,6 +302,7 @@ html {
   padding: 3em 0;
   text-align: center;
   position: relative;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Social icons container in the footer */
@@ -390,19 +400,21 @@ html {
 body.dark-mode {
   background-color: #4c0000;
   color: #ffffff;
-  transition: background-color 0.5s ease, color 0.5s ease; /* Smooth transition for background and text color */
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Header, Footer */
 body.dark-mode header,
 body.dark-mode footer {
   background-color: #150303;
-  color:#150303
+  color:#150303;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Floating Button */
 body.dark-mode .floating-button button {
   background-color: #ffffff; 
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Change background color for all sections */
@@ -427,8 +439,15 @@ body.dark-mode .about-section,
 body.dark-mode .content-section {
   background-color: #4c0000; 
   color: #ffffff; 
-  transition: background-color 0.5s ease, color 0.5s ease; /* Smooth transition for background and text color */
+  transition: background-color 0.5s ease, color 0.5s ease; 
 
+}
+
+body.dark-mode #stem-section,
+body.dark-mode #not-stem-section {
+  background-color: #4c0000;
+  color: #ffffff;         
+  transition: background-color 0.5s ease, color 0.5s ease; 
 }
 
 /* Adjust tile backgrounds */
